Update boxed-view class style

--- a/imports/client/styles/_variables.scss
+++ b/imports/client/styles/_variables.scss
@@ -1,8 +1,12 @@
 // Colors
-$brand-primary: #5b4681;
+$brand-primary: #397ab1;
 $grey: #dddddd;
 $light-grey: #f9f9f9;
 $dark-grey: #777777;
+
+// Body
+$body-background-color: #fafafa;
+$body-default-color: #333333;
 
 // Spacing
 $space: 1.4rem;
@@ -19,6 +23,7 @@ $input-spacing: 1rem;
 // Boxed view
 $boxed-view-overlay-bg: $grey;
 $boxed-view-bg: white;
+$boxed-view-border-color: $grey;
 
 // Button
 $button-bg: $brand-primary;
