--- a/imports/client/styles/components/_boxed-view.scss
+++ b/imports/client/styles/components/_boxed-view.scss
@@ -1,6 +1,5 @@
 .boxed-view {
   align-items: center;
-  background: $boxed-view-overlay-bg;
   display: flex;
   justify-content: center;
   height: 100vh;
@@ -14,11 +13,11 @@
   left: 0;
   right: 0;
   bottom: 0;
-
 }
 
 .boxed-view__box {
   background-color: $boxed-view-bg;
+  border: 1px solid $boxed-view-border-color;
   padding: 2.4rem;
   text-align: center;
   width: 24rem;
